<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/memorizeTheseContacts"
            android:id="@+id/gameScreenTextView"
            android:textSize="28sp"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/roundText"
            android:id="@+id/roundTextView"
            android:layout_below="@+id/gameScreenTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="18sp"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/readyButton"
            android:id="@+id/readyButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/randomWordListView"
            android:layout_below="@+id/roundTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_above="@+id/readyButton"/>
</RelativeLayout>