<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guessMissingWord"
            android:id="@+id/guessScreenTextView"
            android:textSize="28sp"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/roundText"
            android:id="@+id/roundView"
            android:layout_below="@+id/guessScreenTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="18sp"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:id="@+id/randomWordButtonOne"
            android:layout_above="@+id/randomWordButtonTwo"
            android:layout_alignParentStart="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:id="@+id/randomWordButtonTwo"
            android:layout_above="@+id/randomWordButtonThree"
            android:layout_alignParentStart="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:id="@+id/randomWordButtonThree"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/randomWordListViewGuess"
            android:layout_below="@+id/roundView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_above="@+id/randomWordButtonOne"/>
</RelativeLayout>